WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227543
VisiblePosition::absoluteSelectionBoundsForLine fails on multiline vertical-rl content
https://bugs.webkit.org/show_bug.cgi?id=227543
Summary
VisiblePosition::absoluteSelectionBoundsForLine fails on multiline vertical-r...
alan
Reported
2021-06-30 14:12:25 PDT
it does not compute the line position properly (missing writing direction flip).
Attachments
Patch
(1.81 KB, patch)
2021-06-30 15:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.32 KB, patch)
2021-06-30 21:33 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-06-30 15:24:25 PDT
<
rdar://79887141
>
alan
Comment 2
2021-06-30 15:26:13 PDT
Created
attachment 432633
[details]
Patch
Simon Fraser (smfr)
Comment 3
2021-06-30 15:30:33 PDT
Comment on
attachment 432633
[details]
Patch Can we make a test?
alan
Comment 4
2021-06-30 21:33:52 PDT
Created
attachment 432658
[details]
Patch
EWS
Comment 5
2021-07-01 06:29:15 PDT
Committed
r279463
(
239319@main
): <
https://commits.webkit.org/239319@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432658
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug