VisiblePosition::absoluteSelectionBoundsForLine fails on multiline vertical-rl content https://bugs.webkit.org/show_bug.cgi?id=227543 <rdar://79887141>

Reviewed by Simon Fraser.

Source/WebCore:

absoluteSelectionBoundsForLine flips the line's logical rect for the writing mode (horizontal vs. vertical)
but not for the block flow direction (ltr vs. rtl).
This adjustment is very similar to what we do in absoluteCaretBounds (see absoluteBoundsForLocalCaretRect).

* editing/VisiblePosition.cpp:
(WebCore::VisiblePosition::absoluteSelectionBoundsForLine const):
* testing/Internals.cpp:
(WebCore::Internals::absoluteLineRectFromPoint):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/inline/line-rect-from-point-expected.txt: Added.
* fast/inline/line-rect-from-point.html: Added.


Canonical link: https://commits.webkit.org/239319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279463 268f45cc-cd09-0410-ab3c-d52691b4dbfc